<resources>
    <string name="app_name">Resource</string>
    <string name="portrait">Portrait EN</string>
    <string name="landscape">Landscape</string>
    <string name="sensor">Sensor</string>
    <string name="locales">Locales</string>
    <string name="en">En</string>
    <string name="uk">Uk</string>
    <string name="themes">Themes</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="colored">Colored</string>
    <string name="en_gb">En GB</string>

    <string name="orientation">Orientation</string>
    <string name="unspecified">Unspecified</string>
    <string name="sensor_portrait">Sensor Portrait</string>
    <string name="sensor_landscape">Sensor Landscape</string>
    <string name="full_sensor">Full Sensor\n</string>
    <string name="full_user">Full User\n</string>
    <string name="locked">Locked</string>

</resources>