<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/orientationMenu"
        android:title="@string/orientation">
        <menu >
            <item
                android:id="@+id/unspecified"
                android:title="@string/unspecified" />
            <item
                android:id="@+id/sensor"
                android:title="@string/sensor" />
            <item
                android:id="@+id/sensor_portrait"
                android:title="@string/sensor_portrait" />
            <item
                android:id="@+id/sensor_landscape"
                android:title="@string/sensor_landscape" />
            <item
                android:id="@+id/full_sensor"
                android:title="@string/full_sensor" />
            <item
                android:id="@+id/full_user"
                android:title="@string/full_user" />
            <item
                android:id="@+id/portrait"
                android:title="@string/portrait" />
            <item
                android:id="@+id/landscape"
                android:title="@string/landscape" />
            <item
                android:id="@+id/locked"
                android:title="@string/locked" />
        </menu>
    </item>

    <item android:title="@string/locales" >
        <menu >
            <item
                android:id="@+id/enLocaleMenu"
                android:title="@string/en" />
            <item
                android:id="@+id/enGBLocaleMenu"
                android:title="@string/en_gb" />
            <item
                android:id="@+id/ukLocaleMenu"
                android:title="@string/uk" />
        </menu>
    </item>
    <item android:title="@string/themes" >
        <menu >
            <item
                android:id="@+id/lightThemeMenu"
                android:title="@string/light" />
            <item
                android:id="@+id/darkThemeMenu"
                android:title="@string/dark" />
            <item
                android:id="@+id/coloredThemeMenu"
                android:title="@string/colored" />
        </menu>
    </item>
</menu>